# encode-oct-2024

decentralwork/contracts/decentralwork/: Cargo.toml
decentralwork/contracts/decentralwork/src/: lib.rs  storage.rs  test.rs  token.rs
decentralwork/contracts/decentralwork/src/types/: dispute.rs  errors.rs  job.rs  mod.rs  user.rs
decentralwork/contracts/decentralwork/test_snapshots/test/: test_create_service.1.json  test_milestone_workflow.1.json  test_user_registration.1.json
decentralwork/dework/: README.md  package-lock.json  package.json
decentralwork/dework/src/: index.ts
decentralwork/generated-bindings-dework/: README.md  package-lock.json  package.json
decentralwork/generated-bindings-dework/src/: index.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/utils/: walletService.ts
token/contracts/hello_world/: Cargo.toml
vite-project/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
vite-project/src/: App.tsx  main.tsx
vite-project/src/components/: acceptJobDrawer.tsx  columns.tsx  components-create-job-button.tsx  components-gig-card.tsx  components-navbar.tsx  createJobButton.tsx  datatable.tsx  footer.tsx  home-page.tsx  jobAdCards.tsx  navbar.tsx  pages-dashboard-user.tsx  pages-explore.tsx  wallet_button.tsx
vite-project/src/hooks/: useEffectAsync.tsx
vite-project/src/pages/: dashboard_user.tsx  detail.tsx  explore.tsx  home.tsx
vite-project/src/store/: useStore.tsx
vite-project/src/types/: index.d.ts
vite-project/src/utils/: DeWorkContractService.ts  (+1 more)
(+2 files in other folders)
